builder/tests/08-unrecognized-attribute.stderr
error: expected `builder(each = "...")`
  --> $DIR/08-unrecognized-attribute.rs:23:5
   |
23 |     args: Vec<String>,
   |     ^^^^
